# ML-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.md
cmake/: CompilerWarnings.cmake
docs/: Doxyfile.in
docs/fr/: 01_architecture.md  02_makefile.md  03_cmake.md  04_core_math.md  05_stack.md  06_linear_regression.md  07_logistic_regression.md  08_knn.md  09_perceptron.md  10_svm.md  README.md
examples/: knn.c  linear_regression.c  logistic_regression.c  lr  perceptron.c  svm.c
include/yaj_ml/: error.h  knn.h  linear_regression.h  logistic_regression.h  matrix.h  model_api.h  perceptron.h  svm.h  types.h  vector.h
models/: CMakeLists.txt
models/knn/: CMakeLists.txt  knn.c
models/linear_regression/: CMakeLists.txt  linear_regression.c
models/logistic_regression/: CMakeLists.txt  logistic_regression.c
models/perceptron/: CMakeLists.txt  perceptron.c
models/svm/: CMakeLists.txt  svm.c
src/: error.c  matrix.c  vector.c
tests/: CMakeLists.txt  test_error.c  test_harness.h  test_knn.c  test_linear_regression.c  test_logistic_regression.c  test_main.c  test_matrix.c  test_perceptron.c  test_svm.c  test_vector.c
