# Model implementations will be added here as separate static libraries.
# Each model subdirectory will expose its own target, e.g.:
#   add_subdirectory(linear_regression)

add_subdirectory(linear_regression)
add_subdirectory(logistic_regression)
add_subdirectory(perceptron)
add_subdirectory(knn)
add_subdirectory(svm)
